8308614: Enabling JVMTI ClassLoad event slows down vthread creation by factor 10