src/hotspot/share/prims/jvmtiThreadState.hpp
@@ -231,6 +231,8 @@ class JvmtiThreadState : public CHeapObj<mtInternal> {
   inline JvmtiEnvThreadState* head_env_thread_state();
   inline void set_head_env_thread_state(JvmtiEnvThreadState* ets);
 
+  static bool _seen_interp_only_mode; // needed for optimization
+
  public:
   ~JvmtiThreadState();
 
@@ -249,6 +251,13 @@ class JvmtiThreadState : public CHeapObj<mtInternal> {
   inline JvmtiEnvThreadState* env_thread_state(JvmtiEnvBase *env);
 
   static void periodic_clean_up();
+
+  // JvmtiThreadState objects for virtual thread filtered events enabled globally
+  // must be created eagerly if the interp_only_mode is enabled. Otherwise,
+  // it is an important optimization to create JvmtiThreadState objects lazily.
+  static bool seen_interp_only_mode() {
+    return _seen_interp_only_mode;
+  }
 
   void add_env(JvmtiEnvBase *env);
 
